k8s-config/php-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: phpmysql
spec:
  selector:
    matchLabels:
      app: phpmysql
      tier: phpmysql
  replicas: 4
  template:
    metadata:
      labels:
        app: phpmysql
        tier: phpmysql
    spec:
      #nodeSelector:
      #  frontend: "1"
      containers:
      - name: myphpmysql
        image: arigatuo/phpmysql:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
