k8s-config/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmysql
  labels:
    app: phpmysql
    tier: phpmysql
spec: 
  # comment or delete the following line if you want to use a LoadBalancer
  #type: NodePort 
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  #type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: phpmysql
    tier: phpmysql
