k8s-config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phpmysql-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k6s.tenwebchat.com
    http:
      paths:
      - backend:
          serviceName: phpmysql
          servicePort: 80
